# DataBaker

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  setup.cfg
data_baker/: __main__.py  baking.py  logger.py  mongo.py  rmq.py  settings.py
tests/: test_import.py
