## More info:
# https://setuptools.readthedocs.io/en/latest/setuptools.html
# https://packaging.python.org/guides/distributing-packages-using-setuptools
# https://www.python.org/dev/peps/pep-0345/#metadata-version

[metadata]
url = https://github.com/Bezunca/DataBaker
name = data_baker
version = 0.0.9
license = LicenseRef-Proprietary
keywords =
    data
    baker
    baking
    pre-process
author = Raphael C. Almeida
author_email = raphaelpda140@gmail.com
maintainer = Bezunca
maintainer_email = bezuncainvestimentos@gmail.com
description = A data baker for wallet data
classifiers =
    Development Status :: 1 - Planning
#   TODO: Add classifiers from https://pypi.org/pypi?%3Aaction=list_classifiers
download_url = https://github.com/Bezunca/DataBaker/download
project_urls =
    Source Code = https://github.com/Bezunca/DataBaker
    Bug Tracker = https://github.com/Bezunca/DataBaker/issues
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
# str
packages = find:
#   Indicates which packages should be included in this module
#   find: and find_namespace: will automatically find all packages
# bool
zip_safe = True
#   Indicates whether your package is able to be run from within a zip archive or not
# list-semi
setup_requires =
    pip >= 18.1, != 19.0
    setuptools >= 40.5.0
#   List all packages required in order to run your package's setup.py
# str
python_requires = ~=3.8
#   Define the required python interpreter version to run you package
# list-semi
install_requires =
    importlib_metadata
    pika
    python-dotenv
    pymongo
# bool
include_package_data = False
#   Automatically include in your package any data file declared inside MANIFEST.in
#   If possible, it is recommended to use package_data and exclude_package_data instead

# Define executable entry-points to this package
[options.entry_points]
console_scripts =
    data_baker = data_baker.__main__:main

# Put data files inside package
[options.package_data]
* = py.typed
# package_name = files_pattern, ...

# Custom options for automatic package search
[options.packages.find]
# list-semi
exclude =
    tests

# Extra dependencies, can be installed with: `pip install package[extra]`
[options.extras_require]
# list-semi
dev =
    mypy
    twine
    black
    isort
    venvtools
#   TODO: Add your development dependencies
# list-semi
docs =
#   TODO: Add your documentation dependencies
# list-semi
tests =
#   TODO: Add your tests dependencies

[venv]
extras =
    dev
    docs
    tests

[mypy]
pretty = True
color_output = True
error_summary = True
ignore_errors = False
follow_imports = normal
implicit_reexport = True
python_executable = ./.venv/bin/python
namespace_packages = True
check_untyped_defs = True

allow_redefinition = False
allow_untyped_globals = False

no_implicit_optional = True
no_silence_site_packages = False

strict = True
strict_optional = True
strict_equality = True

show_error_codes = True
show_none_errors = True
show_error_context = True
show_column_numbers = True

warn_no_return = True
warn_return_any = True
warn_unreachable = True
warn_redundant_casts = True

disallow_any_expr = False
disallow_any_explicit = False
disallow_any_generics = True
disallow_any_decorated = False
disallow_any_unimported = True
disallow_subclassing_any = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_incomplete_defs = True
